                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 17-03-2006 added: directory navigation history in my programs.
 - 17-03-2006 fixed: trailing (null) behind freespace info strings.
 - 17-03-2006 removed: xns support (buggy, redundant).
 - 17-03-2006 fixed: httpapi: bug in getGUIStatus which could hang the web server thread
 - 17-03-2006 fixed: httpapi: extended Sleep period in debug build to make debugging sessions more reliable (on my PC anyway)
 - 17-03-2006 added: the language folders now contain a file called langinfo.xml, this file contains defaults for each language
                     Defaults are:
                       - gui charset
                       - subtitle charset for ttf fonts
                       - dvd menu language
                       - dvd audio language (Not working yet)
                       - dvd subtitle language (Not working yet)
 - 17-03-2006 changed: new attribute in <fontset> tag of the fonts.xml. See online manual for more info.
 - 17-03-2006 removed: setting for charset selection, charset is defined in langinfo.xml now
 - 17-03-2006 fixed: Static DNS setting was not correctly assigned to network settings
 - 17-03-2006 added: <info> tag now works on ButtonScroller buttons (for text)
 - 17-03-2006 changed: Skin.SetString, Skin.SetImage, and Skin.SetPath can take the strings value as an extra parameter, thanks to Donno.
 - 17-03-2006 fixed: Network could be screwed up both on boot + going into System Info
 - 17-03-2006 added: Stacked files played seamlessly save their playtimes in the database for fast startup (more of a workaround than a true fix)
 - 16-03-2006 fixed: Year in Title view was not correct.