@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 18-03-2006 fixed: trainers now work with autolaunched titles.
+ - 18-03-2006 fixed: trainer overlay for games on dvd.
  - 17-03-2006 added: directory navigation history in my programs.
  - 17-03-2006 fixed: trailing (null) behind freespace info strings.
  - 17-03-2006 removed: xns support (buggy, redundant).
